--- a/css/app.css
+++ b/css/app.css
@@ -173,7 +173,7 @@ h1 {
 	width: 85%;
 	position: relative;
 	transition: all 5s ease-in-out;
-	font-family: 'Gloria Hallelujah', cursive;
+	font-family: "Gill Sans", sans-serif;
 }
   
 .popup h2 {
@@ -220,7 +220,7 @@ h1 {
 	display: block;
 	margin: 0 auto;
 	width: 50%;
-	font-family: 'Gloria Hallelujah', cursive;
+	font-family: "Gill Sans", sans-serif;
 	color: #ffffff;
 	border-radius: 5px;
 }
