--- a/css/app.css
+++ b/css/app.css
@@ -42,7 +42,7 @@ h1 {
 
 .deck {
 	width: 85%;
-	background: #456F42;
+	background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
 	padding: 1rem;
 	border-radius: 4px;
 	box-shadow: 8px 9px 26px 0 rgba(46, 61, 73, 0.5);
